Fixed so that all the celemo images goes to startpage also fixed so that footer isn't huge on mobile, and removed unnecessary links

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -27,6 +27,7 @@
   justify-content: center;
   justify-content: space-evenly;
   align-items: center;
+  max-height: 60px;
 }
 
 .footer a {
@@ -46,8 +47,11 @@ a:link {
 /*===============================================*/
 /* Mobile */
 @media screen and (max-width: 599px) {
-  .footer-desktop {
+  .footer-desktop, .over {
     display: none;
+  }
+  .footer{
+    grid-template-rows: 0 60px;
   }
 }
 
